// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nested useTheme works 1`] = `
.emotion-0 {
  color: green;
}

.emotion-0:hover {
  color: darkgreen;
}

.emotion-1 {
  color: lawngreen;
}

.emotion-1:hover {
  color: seagreen;
}

<div
  class="emotion-0"
>
  Should be green
  <div
    class="emotion-1"
  >
    Should be lawngreen
  </div>
</div>
`;

exports[`useTheme works 1`] = `
.emotion-0 {
  color: green;
}

.emotion-0:hover {
  color: darkgreen;
}

<div
  class="emotion-0"
>
  Should be green
</div>
`;
